fix image overflowing

--- a/src/static/index.css
+++ b/src/static/index.css
@@ -40,6 +40,10 @@ a {
     color: var(--color);
 }
 
+img {
+    max-width: 50%;
+}
+
 .bold {
     font-weight: 700;
 }
